# sbom-generator

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: check-regressions.yml  test.yml
misc/: compare-sbom.py  compare-sboms.sh  test.sh
resources/maven/hierarchy/: pom.xml
resources/maven/hierarchy/results/: osv.json
resources/maven/simple/: pom.xml
resources/maven/simple/results/: osv.json
resources/maven/variables/: pom.xml
resources/maven/variables/results/: osv.json
resources/maven/variables/subproject/: pom.xml
resources/maven/variables/subproject/sub2/: pom.xml
resources/maven/variables/subproject/sub3/: pom.xml
src/: analyze.rs  build.rs  lib.rs  main.rs  model.rs  utils.rs
src/analyze/: producers.rs  sbom_generate.rs
src/analyze/producers/: maven.rs  maven_producer.rs  producer.rs
src/analyze/producers/maven/: constants.rs  context.rs  import.rs  maven_file.rs  maven_producer.rs  model.rs
src/model/: configuration.rs  dependency.rs  location.rs  position.rs
src/sbom/: generate.rs
src/utils/: file_utils.rs  tree_sitter.rs
src/utils/tree_sitter/: language.rs  tree.rs
