[package]
name = "sbom-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "prepush-hook",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[dependencies]
anyhow = "1.0.86"
bstr = "1.9.1"
derive_builder = "0.20.0"
getopts = "0.2.21"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde-cyclonedx = "0.9.1"
tree-sitter = "0.22.6"
walkdir = "2.5.0"
lazy_static = "1.5.0"

[build-dependencies]
cc = "1.1.5"
